--- a/highscores.html
+++ b/highscores.html
@@ -17,7 +17,7 @@ crossorigin="anonymous"></script>
         <div id="highScores" class="flex-center flex-column">
             <h1 id ="finalScore">High Scores</h1>
             <ul id="highScoresList"></ul>
-            <a class="btn" href="/quiz/index.html">Go Home</a>
+            <a class="btn" <base href="https://san-6538.github.io/quiz/">Go Home</a>
         </div>
     </div>
     <script src="./highscores.js"></script>
